--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest –coverage",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/AhmadMHanif7/Score-City/issues"
   },
-  "homepage": "https://github.com/AhmadMHanif7/Score-City#readme"
+  "homepage": "https://github.com/AhmadMHanif7/Score-City#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3"
+  }
 }
